# Nautobot-MCP-Server

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
chainlit_app/: Dockerfile  app.py
docs/: api.md  auth.md  configuration.md  deploy.md  index.md  quickstart.md  roadmap.md
src/: Dockerfile  README.md  pyproject.toml
src/nautobot_mcp_server/: server.py  settings.py
src/nautobot_mcp_server/clients/: nautobot_graphql.py
src/nautobot_mcp_server/graphql/: devices_by_location.graphql  devices_by_location_and_role.graphql  prefixes_by_location.graphql
src/nautobot_mcp_server/tools/: devices.py  prefixes.py
tests/: conftest.py  test_auth_api_key.py  test_client_graphql.py  test_graphql_queries.py  test_server.py  test_settings.py  test_tools.py
